SERVER-1296 fix or/empty in assertion